syntax = "proto3";
package assetmantle.identities.transactions.quash;

import "assetmantle/base/ids/internal/identityID.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.IdentityID identity_i_d = 3;
}
