syntax = "proto3";
package identities.transactions.revoke;

import "assetmantle/base/ids/v1/classificationID.v1.proto";
import "assetmantle/base/ids/v1/identityID.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.IdentityID to_i_d = 3;
  ids.ClassificationID classification_i_d = 4;
}
